foundation of process stopper

--- a/src/TidyWindow.Core/TidyWindow.Core.csproj
+++ b/src/TidyWindow.Core/TidyWindow.Core.csproj
@@ -22,6 +22,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </Content>
+    <Content Include="..\..\listofknown.txt" Link="catalog\listofknown.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
