--- a/src/TidyWindow.Core/TidyWindow.Core.csproj
+++ b/src/TidyWindow.Core/TidyWindow.Core.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.4.3" />
+    <!-- Use official TaskScheduler package (namespace Microsoft.Win32.TaskScheduler) -->
+    <PackageReference Include="TaskScheduler" Version="2.12.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
