--- a/src/TidyWindow.Core/TidyWindow.Core.csproj
+++ b/src/TidyWindow.Core/TidyWindow.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="TidyWindow.Core.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.4.3" />
     <!-- Use official TaskScheduler package (namespace Microsoft.Win32.TaskScheduler) -->
     <PackageReference Include="TaskScheduler" Version="2.12.0" />
